# okf-pack

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  justfile  package.toml  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: _reusable.yml  ci-rust.yml  ci.yml
docs/: STYLE.md
docs/adr/: 0001-no-kuzu-graph-backend.md  0002-pack-owns-store-open-dispatch.md
examples/memory/: index.md  sample-flat-fact.md  sample-nested-fact.md
examples/sample-space/: concept-b.md  index.md  okf-spec.md
spec/: okf-ext-0.1.md  okf-ext-0.1.schema.json
src/: canonical.rs  cli.rs  embed.rs  graph.rs  lib.rs  main.rs  models.rs  okf.rs  parse.rs  privilege.rs  rpc.rs  scaffold.rs  store.rs  surface.rs  validate.rs
templates/space-pack/: README.md.tmpl  gitignore.tmpl  manifest.patch.toml.tmpl  okf-config.toml.tmpl  package.toml.tmpl
tests/: embedder.rs  export.rs  graph.rs  manifest.rs  models.rs  roundtrip_internal.rs  roundtrip_okf.rs  rpc.rs  scaffold.rs  store.rs  surfaces.rs  validate.rs
tests/fixtures/corrupt/: bad-field.md
tests/fixtures/privileged/: secret-note.md
tests/fixtures/sample-space/: concept-a.md  concept-b.md  index.md
tests/fixtures/surfaces/container/adr/: 0001-sample-decision.md
tests/fixtures/surfaces/devtel/: project-note.md
tests/fixtures/surfaces/memory/: MEMORY.md  flat-fact.md  nested-fact.md
tests/fixtures/surfaces/skills/example/: SKILL.md
